--- a/MultiValidator/Resources/MultiValidatorResources.resx
+++ b/MultiValidator/Resources/MultiValidatorResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InstanceNullErrorFormat" xml:space="preserve">
+    <value>Instance to validate of type '{0}' is null</value>
+  </data>
   <data name="TypeIsNotAValidatorFormat" xml:space="preserve">
     <value>Could not find validator of type {0}</value>
   </data>
